--- a/index.html
+++ b/index.html
@@ -10,111 +10,108 @@ https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
 -->
 <link rel="stylesheet" href="style.css">
 </head>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-
-
-
 <body>
-
+<section>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
+	<div></div>
 	<header>
 		<h1>
 			<span>C</span>
@@ -126,388 +123,177 @@ https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
 			<span>T</span>
 			<span>S</span>
 		</h1>
-		<p>Tame Impala</p>
+		<!-- <p>Tame Impala</p> -->
 	</header>
+</section>
+
 	<main>
-
 		<section>
 			<header>
-				<h2>Noshes</h2>
-				<p>small dishes</p>
+				<h2>Let it Happen</h2>
+				<p>Tame Impala</p>
 			</header>
+			<p>
+				It's always around me, all this noise, but
+				Not nearly as loud as the voice saying
 
-
-			<dl>
-
-				<dt>Russ &amp; Daughters Knishes</dt>
-				<dd>Potato, carmelized onion, mustard</dd>
-				<dd>8</dd> <!-- price -->
-
-
-
-
-
-
-				<dt>Hot Smoke/Cold Smoke</dt>
-				<dd>Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</dd>
-				<dd>13</dd>
-
-
-
-
-
-				<dt>Potato latkes</dt>
-				<dd>Salmon roe and creme fraiche</dd>
-				<dd>13</dd>
-
-
-
-
-
-				<dt>Kasha Varnishkas</dt>
-				<dd>buckwheat, caramelized onion, bowtie egg noodles</dd>
-
-
-
-
-
-				<dt>Chopped liver</dt>
-				<dd>Matzo, pickled red onion</dd>
-				<dd>9</dd>
-
-
-
-
-
-				<dt>Super heebster</dt>
-				<dd>whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream
-					cheese, bagel toast</dd>
-				<dd>10</dd>
-
-
-
-
-
-				<dt>Pastrami Russ</dt>
-				<dd>pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</dd>
-				<dd>12</dd>
-
-
-
-
-
-				<dt>sours</dt>
-				<dd>pickled vegetables, pickles from the barrel</dd>
-				<dd>7</dd>
-
-
-			</dl>
+				"Let it happen, let it happen"
+				(It's gonna feel so good)
+				"Just let it happen, let it happen"
+			</p>
+			<p>
+				All this running around
+				Tryin' to cover my shadow
+				A notion growing inside
+				Now all the others seem shallow
+				All this running around
+				Bearing down on my shoulders
+				I can hear an alarm
+				It must be morning
+			</p>
+			<p>
+				I heard about a whirlwind that's coming 'round
+				It's gonna carry off all that isn't bound, and
+				When it happens, when it happens
+				(I won't be holding on)
+				So let it happen, let it happen
+			</p>
+			<p>
+				All this running around
+				I can't fight it much longer
+				Something's tryin' to get out
+				And it's never been closer
+				If my take-off fails
+				Make up some other story
+				But if I never come back
+				Tell my mother I'm sorry
+			</p>
+			<p>
+				Baby, now I'm ready, moving on
+				Oh, but maybe I was ready all along
+				Oh, I'm ready for the moment and the sound
+				Oh, but maybe I was ready all along
+				Baby, now I'm ready, moving on
+				Oh, but maybe I was ready all along
+				Oh, I'm ready for the moment and the sound
+				Oh, but maybe I was ready all along
+			</p>
 		</section>
-
-
 		<section>
 			<header>
-				<h2>boards</h2>
-				<p>open-faced sandwiches</p>
+				<h2>Nangs</h2>
+				<p>Tame impala</p>
 			</header>
-
-			<dl>
-
-				<dt>the classic</dt>
-				<dd>gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</dd>
-				<dd>16</dd>
-
-
-
-
-
-				<dt>mensch</dt>
-				<dd>sturgeon, butter, bagel/bialy, tomato, onion, capers</dd>
-				<dd>22</dd>
-
-
-
-
-
-				<dt>shtetl</dt>
-				<dd>smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</dd>
-				<dd>18</dd>
-
-
-
-
-
-				<dt>yum kippered</dt>
-				<dd>kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</dd>
-				<dd>16</dd>
-
-			</dl>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
+			<p>But is there something more than that?</p>
 		</section>
-
-
 		<section>
-
 			<header>
-				<h2>platters</h2>
-				<p>To be shared</p>
+				<h2>The Moment</h2>
+				<p>Tame Impala</p>
 			</header>
-
-			<dl>
-
-				<dt>smoked fish</dt>
-				<dd><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and
-					Russ &amp; daughters bread basket</dd>
-
-
-
-
-
-				<dt>the hattie</dt>
-				<dd>smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</dd>
-				<dd>80</dd>
-
-
-
-
-
-				<dt>the ida</dt>
-				<dd>scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</dd>
-				<dd>70</dd>
-
-
-
-
-
-				<dt>the anne</dt>
-				<dd>western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon
-					roe</dd>
-				<dd>90</dd>
-
-			</dl>
-
 		</section>
-
-
 		<section>
-
 			<header>
-				<h2>Eggs</h2>
-				<p>served all the time</p>
+				<h2>Yes I'm Changing</h2>
+				<p>Tame Impala</p>
 			</header>
-
-			<blockquote>
-				<p lang="yi">Ess gezinter hayt.</p>
-				<p>Eat in good health.</p>
-				<cite>— Yiddish idiom</cite>
-			</blockquote>
-
-			<dl>
-
-				<dt>Lox, eggs &amp; onions</dt>
-				<dd>with toasted shissel rye</dd>
-				<dd>15</dd>
-
-
-
-
-
-				<dt>sturgeon, eggs &amp; onion</dt>
-				<dd>with toasted pumpernickel</dd>
-				<dd>19</dd>
-
-
-
-
-
-				<dt>bella's matzo brei</dt>
-				<dd>matzo, egg, applesauce, sour cream</dd>
-				<dd>12</dd>
-
-
-
-
-
-				<dt>lower sunny side</dt>
-				<dd>sunny side up eggs, gaspe nova smoked salmon, potato latkes</dd>
-				<dd>16</dd>
-
-
-
-
-
-				<dt>eggs benny</dt>
-				<dd>poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</dd>
-				<dd>18</dd>
-
-
-
-
-
-				<dt>farm egg omelette</dt>
-				<dd>gaspe nova smoked salmon, cream cheese</dd>
-				<dd>15</dd>
-
-
-
-
-
-				<dt>soft scrambled eggs &amp; caviar</dt>
-				<dd>custard-like egg, caviar with challah</dd>
-				<dd>180</dd>
-
-
-			</dl>
 		</section>
-
-
 		<section>
-			<h2>Soup</h2>
-
-			<dl>
-
-				<dt>Matzo Ball</dt>
-				<dd>chicken, vegetables, matzo ball</dd>
-				<dd>8</dd>
-
-
-
-
-
-				<dt>Mushroom Barley</dt>
-				<dd>mushrooms, barley with shissel rye bread</dd>
-				<dd>8</dd>
-
-
-
-
-
-				<dt>Borscht</dt>
-				<dd>served chilled: beets, sour cream, dill with pumpernickel</dd>
-				<dd>8</dd>
-
-
-
-
-
-				<dt>Smoked Whitefish Chowder</dt>
-				<dd>dill, esplette pepper, matzo</dd>
-				<dd>10</dd>
-
-			</dl>
-
+			<header>
+				<h2>Eventually</h2>
+				<p>Tame Impala</p>
+			</header>
 		</section>
-
-
 		<section>
-			<h2>salads</h2>
-
-			<dl>
-
-				<dt>Mixed Green</dt>
-				<dd>greens, fennel, dill, capers, citrus dressing</dd>
-				<dd>9</dd>
-
-
-
-
-
-				<dt>Chopped Salad
-				<dd>smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</dd>
-				<dd>14</dd>
-
-
-
-
-
-				<dt>Smoked Trout& Potato</dt>
-				<dd>smoked trout, watercress, caper mustard dressing</dd>
-				<dd>14</dd>
-
-
-			</dl>
+			<header>
+				<h2>Gossip</h2>
+				<p>Tame Impala</p>
+			</header>
 		</section>
-
-
 		<section>
-			<h2>sweet</h2>
-
-			<blockquote>
-				<p lang="yi">A moltsayt on a tsimes iz via a mayse on a moshl.</p>
-				<p>A meal without a sweet dish is like a story without a moral.</p>
-				<cite>— Yiddish idiom</cite>
-			</blockquote>
-
-
-			<dl>
-
-				<dt>blintzes</dt>
-				<dd>fruit compote, sour cream</dd>
-				<dd>8</dd>
-
-
-
-
-
-				<dt>babka french toast</dt>
-				<dd>chocolate babka, sour cream, berries</dd>
-				<dd>10</dd>
-
-
-
-
-
-				<dt>noodle kugel</dt>
-				<dd>farmer cheese, raisins, egg noodles</dd>
-				<dd>7</dd>
-
-
-
-
-
-				<dt>challah bread pudding</dt>
-				<dd>dried apricots, caramel sauce</dd>
-				<dd>9</dd>
-
-
-
-
-
-				<dt>halvah ice cream</dt>
-				<dd>halvah, sesame, salted caramel</dd>
-				<dd>8</dd>
-
-
-
-
-
-				<dt>grandpa's grapefruit</dt>
-				<dd>grapefruit, white germ, maple syrup</dd>
-				<dd>6</dd>
-
-
-
-
-
-				<dt>baked farmer cheese</dt>
-				<dd>blueberry, walnut &amp; honey with pumpernickel</dd>
-				<dd>7</dd>
-
-
-
-
-
-				<dt>cookie plate</dt>
-				<dd>Russ &amp; daughters cookies &amp; sweets</dd>
-				<dd>8</dd>
-
-			</dl>
-
+			<header>
+				<h2>The Less I Know The Better</h2>
+				<p>Tame Impala</p>
+			</header>
 		</section>
-
-	</main>
-
-	<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
-
+		<section>
+			<header>
+				<h2>Past Life</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h2>Disciples</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h2>'Cause I'm a Man'</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h2>Reality In Motion</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h2>Love/Paranoia</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+		<section>
+			<header>
+				<h2>New Person, Same Old Mistake</h2>
+				<p>Tame Impala</p>
+			</header>
+		</section>
+</main>
+<footer>
+		<label for="let it happen">Let It Happen</label>
+		<input type="radio" name="choice" id="let it happen">
+		<label for="nangs">Nangs</label>
+		<input type="radio" name="choice" id="nangs">
+		<label for="the moment">The Moment</label>
+		<input type="radio" name="choice" id="the moment">
+		<label for="changing">Yes I'm Changing</label>
+		<input type="radio" name="choice" id="changing">
+		<label for="eventually">Eventually</label>
+		<input type="radio" name="choice" id="eventually">
+		<label for="gossip">Gossip</label>
+		<input type="radio" name="choice" id="gossip">
+		<label for="the less i know the better">The Less I know The Better</label>
+		<input type="radio" name="choice" id="the less i know the better">
+		<label for="past life">Past Life</label>
+		<input type="radio" name="choice" id="past life">
+		<label for="disciples">Disciples</label>
+		<input type="radio" name="choice" id="disciples">
+		<label for="cause im a man">'Cause I'm A Man</label>
+		<input type="radio" name="choice" id="cause im a man">
+		<label for="reality in motion">Reality In Motion</label>
+		<input type="radio" name="choice" id="reality in motion">
+		<label for="love/paranoia">Love/Paranoia</label>
+		<input type="radio" name="choice" id="love/paranoia">
+		<label for="new person">New Person, Same Old Mistake</label>
+		<input type="radio" name="choice" id="new person">
+	</footer>
 </body>
 
 </html>
