--- a/index.html
+++ b/index.html
@@ -585,8 +585,12 @@
       </section>
     </main>
     <input id="test" type="checkbox" />
-    <label for="test"
-      >Songs
+    <label for="test">
+      <span>S</span>
+      <span>O</span>
+      <span>N</span>
+      <span>G</span>
+      <span>S</span>
       <div></div>
     </label>
     <footer>
